# cv_basics

./: .gitignore  CMakeLists.txt  test_openCV.cpp
